--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "Apache v2",
   "dependencies": {
     "babel": "^5.2.17",
+    "ioredis": "^1.2.5",
     "neo4j": "^2.0.0-RC1",
     "node-fetch": "^1.2.1"
   }
